static/gallery.css
/*
    gallery.css    Mike Glover <mglover@pobox.com>
    this file ontols the look of the gallery pages (colors, size and 
    layout of images, etc.
*/


span {
    display: block;
    text-align: center;
    font-weight: bold;
    margin: auto;
}
h2 {
    text-align: center;
    padding: 0;
    margin: 0;
}

.hidden,#overlay.hidden {
    display: none;
}

.fade {
    opacity: 50%;
}

#gallerymain {
    margin: 0;
    height: 100%;
}

#gallerymain .slug {
    text-align: center;
}
.gallery {
    background:#3f2b18;
    padding: 0;
    margin: 1em;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
    z-index: 0;
    width: 100%;
}
.gallery .photo {
    margin: 3vw;
}
.gallery .photo img {
    display: block;
    margin: auto;
    max-height: 45vh;
    max-width: 16em;
    border: 2px solid black;
    padding: 0;
}
.gallery .photo span {
    margin-top: 5px;
    padding: 0;
    max-width: 13em;
}

#overlay {
    position: fixed;
    display: inline-flex;
    flex-direction: column;
    justify-content: space-between;
    top: 7vh;
    left: 10%;
    height: 70vh;
    width: 80%;
    padding: 8vh 0;
    background:#3f2b18;
    z-index: 100;
}
#overlay img {
    display: block;
    max-height: 70vh;
    max-width: 90%;
    margin: auto;
}
#overlay span {
    display: block;
    text-align: center;
}
#overlay .nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 40%;
    margin: auto;
    padding-top: 0.2em;
}

#close {
    font-family: sans;
    padding: 0 .2em;
    color: #ad821d;;
    border: 2px solid #ad821d;;
    border-radius: 10px;
}
#close:hover {
    background: black;
    color: #c0af98;
}

